[package]
name = "egui-wlr-layer"
version = "0.1.0"
edition = "2024"

[dependencies]
egui                   = "0.31.1"
egui-wgpu              = "0.31.1"
pollster               = "0.4.0"
smithay-client-toolkit = "0.19.2"
wayland-backend        = { version = "0.3.8", features = ["client_system"] }
wayland-client         = "0.31.8"
wgpu                   = "24.0.0"

[dev-dependencies]
egui_demo_lib = "0.31.1"
